fix:rename file extension warning behind dialog

--- a/Frontend/src/app/shared/components/card/card.component.scss
+++ b/Frontend/src/app/shared/components/card/card.component.scss
@@ -55,6 +55,11 @@
             z-index: $baseZIndex + $p;
         }
     }
+    @for $p from 1000 through 1050 {
+        &[priority='#{$p}'] {
+            z-index: $baseZIndex + $p;
+        }
+    }
 }
 
 :host ::ng-deep .card-dialog {
